[package]
name = "shakenc"
version = "0.1.0"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"
repository = "https://github.com/Berylsoft/shakenc"

[[bin]]
name = "shakenc"
path = "main.rs"

[dependencies]
cshake = { git = "https://github.com/Berylsoft/keccak-state", features = ["alloc"] }
argh = "0.1"
rpassword = "7"
hex = "0.4"
indicatif = "0.17"
getrandom = "0.2"
ctrlc = "3.4"
