[package]
name = "shakenc"
version = "0.1.0"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"
repository = "https://github.com/Berylsoft/shakenc"

[[bin]]
name = "shakenc"
path = "main.rs"

[dependencies]
cshake = { git = "https://github.com/Berylsoft/keccak-state", features = ["alloc", "zeroize-on-drop"] }
secprompt = { git = "https://github.com/Berylsoft/secprompt" }
argh = "0.1"
hex = "0.4"
indicatif = "0.17"
getrandom = "0.2"
ctrlc = "3.4"
zeroize = "1"

[target."cfg(target_arch = \"aarch64\")".dependencies]
cpufeatures = "0.2"

[features]
portable-simd = ["cshake/portable-simd"]
